name:                  amazonka-eks
version:               1.6.1
synopsis:              Amazon Elastic Kubernetes Service SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.EKS" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-eks

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.EKS
        , Network.AWS.EKS.CreateCluster
        , Network.AWS.EKS.CreateFargateProfile
        , Network.AWS.EKS.CreateNodegroup
        , Network.AWS.EKS.DeleteCluster
        , Network.AWS.EKS.DeleteFargateProfile
        , Network.AWS.EKS.DeleteNodegroup
        , Network.AWS.EKS.DescribeCluster
        , Network.AWS.EKS.DescribeFargateProfile
        , Network.AWS.EKS.DescribeNodegroup
        , Network.AWS.EKS.DescribeUpdate
        , Network.AWS.EKS.ListClusters
        , Network.AWS.EKS.ListFargateProfiles
        , Network.AWS.EKS.ListNodegroups
        , Network.AWS.EKS.ListTagsForResource
        , Network.AWS.EKS.ListUpdates
        , Network.AWS.EKS.TagResource
        , Network.AWS.EKS.Types
        , Network.AWS.EKS.UntagResource
        , Network.AWS.EKS.UpdateClusterConfig
        , Network.AWS.EKS.UpdateClusterVersion
        , Network.AWS.EKS.UpdateNodegroupConfig
        , Network.AWS.EKS.UpdateNodegroupVersion
        , Network.AWS.EKS.Waiters

    other-modules:
          Network.AWS.EKS.Types.AMITypes
        , Network.AWS.EKS.Types.AutoScalingGroup
        , Network.AWS.EKS.Types.Certificate
        , Network.AWS.EKS.Types.Cluster
        , Network.AWS.EKS.Types.ClusterStatus
        , Network.AWS.EKS.Types.EKSErrorCode
        , Network.AWS.EKS.Types.EncryptionConfig
        , Network.AWS.EKS.Types.ErrorDetail
        , Network.AWS.EKS.Types.FargateProfile
        , Network.AWS.EKS.Types.FargateProfileSelector
        , Network.AWS.EKS.Types.FargateProfileStatus
        , Network.AWS.EKS.Types.Identity
        , Network.AWS.EKS.Types.Issue
        , Network.AWS.EKS.Types.LogSetup
        , Network.AWS.EKS.Types.LogType
        , Network.AWS.EKS.Types.Logging
        , Network.AWS.EKS.Types.Nodegroup
        , Network.AWS.EKS.Types.NodegroupHealth
        , Network.AWS.EKS.Types.NodegroupIssueCode
        , Network.AWS.EKS.Types.NodegroupResources
        , Network.AWS.EKS.Types.NodegroupScalingConfig
        , Network.AWS.EKS.Types.NodegroupStatus
        , Network.AWS.EKS.Types.OIdC
        , Network.AWS.EKS.Types.Product
        , Network.AWS.EKS.Types.Provider
        , Network.AWS.EKS.Types.RemoteAccessConfig
        , Network.AWS.EKS.Types.Update
        , Network.AWS.EKS.Types.UpdateLabelsPayload
        , Network.AWS.EKS.Types.UpdateParam
        , Network.AWS.EKS.Types.UpdateParamType
        , Network.AWS.EKS.Types.UpdateStatus
        , Network.AWS.EKS.Types.UpdateType
        , Network.AWS.EKS.Types.VPCConfigRequest
        , Network.AWS.EKS.Types.VPCConfigResponse

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-eks-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.EKS
        , Test.AWS.Gen.EKS
        , Test.AWS.EKS.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-eks
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
