name:                  amazonka-elasticsearch
version:               1.6.1
synopsis:              Amazon Elasticsearch Service SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.ElasticSearch" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-elasticsearch

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.ElasticSearch
        , Network.AWS.ElasticSearch.AddTags
        , Network.AWS.ElasticSearch.CreateElasticsearchDomain
        , Network.AWS.ElasticSearch.DeleteElasticsearchDomain
        , Network.AWS.ElasticSearch.DeleteElasticsearchServiceRole
        , Network.AWS.ElasticSearch.DescribeElasticsearchDomain
        , Network.AWS.ElasticSearch.DescribeElasticsearchDomainConfig
        , Network.AWS.ElasticSearch.DescribeElasticsearchDomains
        , Network.AWS.ElasticSearch.DescribeElasticsearchInstanceTypeLimits
        , Network.AWS.ElasticSearch.DescribeReservedElasticsearchInstanceOfferings
        , Network.AWS.ElasticSearch.DescribeReservedElasticsearchInstances
        , Network.AWS.ElasticSearch.ListDomainNames
        , Network.AWS.ElasticSearch.ListElasticsearchInstanceTypes
        , Network.AWS.ElasticSearch.ListElasticsearchVersions
        , Network.AWS.ElasticSearch.ListTags
        , Network.AWS.ElasticSearch.PurchaseReservedElasticsearchInstanceOffering
        , Network.AWS.ElasticSearch.RemoveTags
        , Network.AWS.ElasticSearch.Types
        , Network.AWS.ElasticSearch.UpdateElasticsearchDomainConfig
        , Network.AWS.ElasticSearch.Waiters

    other-modules:
          Network.AWS.ElasticSearch.Types.AccessPoliciesStatus
        , Network.AWS.ElasticSearch.Types.AdditionalLimit
        , Network.AWS.ElasticSearch.Types.AdvancedOptionsStatus
        , Network.AWS.ElasticSearch.Types.CognitoOptions
        , Network.AWS.ElasticSearch.Types.CognitoOptionsStatus
        , Network.AWS.ElasticSearch.Types.DomainInfo
        , Network.AWS.ElasticSearch.Types.EBSOptions
        , Network.AWS.ElasticSearch.Types.EBSOptionsStatus
        , Network.AWS.ElasticSearch.Types.ESPartitionInstanceType
        , Network.AWS.ElasticSearch.Types.ElasticsearchClusterConfig
        , Network.AWS.ElasticSearch.Types.ElasticsearchClusterConfigStatus
        , Network.AWS.ElasticSearch.Types.ElasticsearchDomainConfig
        , Network.AWS.ElasticSearch.Types.ElasticsearchDomainStatus
        , Network.AWS.ElasticSearch.Types.ElasticsearchVersionStatus
        , Network.AWS.ElasticSearch.Types.EncryptionAtRestOptions
        , Network.AWS.ElasticSearch.Types.EncryptionAtRestOptionsStatus
        , Network.AWS.ElasticSearch.Types.InstanceCountLimits
        , Network.AWS.ElasticSearch.Types.InstanceLimits
        , Network.AWS.ElasticSearch.Types.Limits
        , Network.AWS.ElasticSearch.Types.LogPublishingOption
        , Network.AWS.ElasticSearch.Types.LogPublishingOptionsStatus
        , Network.AWS.ElasticSearch.Types.LogType
        , Network.AWS.ElasticSearch.Types.OptionState
        , Network.AWS.ElasticSearch.Types.OptionStatus
        , Network.AWS.ElasticSearch.Types.Product
        , Network.AWS.ElasticSearch.Types.RecurringCharge
        , Network.AWS.ElasticSearch.Types.ReservedElasticsearchInstance
        , Network.AWS.ElasticSearch.Types.ReservedElasticsearchInstanceOffering
        , Network.AWS.ElasticSearch.Types.ReservedElasticsearchInstancePaymentOption
        , Network.AWS.ElasticSearch.Types.SnapshotOptions
        , Network.AWS.ElasticSearch.Types.SnapshotOptionsStatus
        , Network.AWS.ElasticSearch.Types.StorageType
        , Network.AWS.ElasticSearch.Types.StorageTypeLimit
        , Network.AWS.ElasticSearch.Types.Tag
        , Network.AWS.ElasticSearch.Types.VPCDerivedInfo
        , Network.AWS.ElasticSearch.Types.VPCDerivedInfoStatus
        , Network.AWS.ElasticSearch.Types.VPCOptions
        , Network.AWS.ElasticSearch.Types.VolumeType

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-elasticsearch-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.ElasticSearch
        , Test.AWS.Gen.ElasticSearch
        , Test.AWS.ElasticSearch.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-elasticsearch
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
