name:                  amazonka-elbv2
version:               1.6.1
synopsis:              Amazon Elastic Load Balancing SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.ELBv2" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-elbv2

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.ELBv2
        , Network.AWS.ELBv2.AddListenerCertificates
        , Network.AWS.ELBv2.AddTags
        , Network.AWS.ELBv2.CreateListener
        , Network.AWS.ELBv2.CreateLoadBalancer
        , Network.AWS.ELBv2.CreateRule
        , Network.AWS.ELBv2.CreateTargetGroup
        , Network.AWS.ELBv2.DeleteListener
        , Network.AWS.ELBv2.DeleteLoadBalancer
        , Network.AWS.ELBv2.DeleteRule
        , Network.AWS.ELBv2.DeleteTargetGroup
        , Network.AWS.ELBv2.DeregisterTargets
        , Network.AWS.ELBv2.DescribeAccountLimits
        , Network.AWS.ELBv2.DescribeListenerCertificates
        , Network.AWS.ELBv2.DescribeListeners
        , Network.AWS.ELBv2.DescribeLoadBalancerAttributes
        , Network.AWS.ELBv2.DescribeLoadBalancers
        , Network.AWS.ELBv2.DescribeRules
        , Network.AWS.ELBv2.DescribeSSLPolicies
        , Network.AWS.ELBv2.DescribeTags
        , Network.AWS.ELBv2.DescribeTargetGroupAttributes
        , Network.AWS.ELBv2.DescribeTargetGroups
        , Network.AWS.ELBv2.DescribeTargetHealth
        , Network.AWS.ELBv2.ModifyListener
        , Network.AWS.ELBv2.ModifyLoadBalancerAttributes
        , Network.AWS.ELBv2.ModifyRule
        , Network.AWS.ELBv2.ModifyTargetGroup
        , Network.AWS.ELBv2.ModifyTargetGroupAttributes
        , Network.AWS.ELBv2.RegisterTargets
        , Network.AWS.ELBv2.RemoveListenerCertificates
        , Network.AWS.ELBv2.RemoveTags
        , Network.AWS.ELBv2.SetIPAddressType
        , Network.AWS.ELBv2.SetRulePriorities
        , Network.AWS.ELBv2.SetSecurityGroups
        , Network.AWS.ELBv2.SetSubnets
        , Network.AWS.ELBv2.Types
        , Network.AWS.ELBv2.Waiters

    other-modules:
          Network.AWS.ELBv2.Types.Action
        , Network.AWS.ELBv2.Types.ActionTypeEnum
        , Network.AWS.ELBv2.Types.AvailabilityZone
        , Network.AWS.ELBv2.Types.Certificate
        , Network.AWS.ELBv2.Types.Cipher
        , Network.AWS.ELBv2.Types.IPAddressType
        , Network.AWS.ELBv2.Types.Limit
        , Network.AWS.ELBv2.Types.Listener
        , Network.AWS.ELBv2.Types.LoadBalancer
        , Network.AWS.ELBv2.Types.LoadBalancerAddress
        , Network.AWS.ELBv2.Types.LoadBalancerAttribute
        , Network.AWS.ELBv2.Types.LoadBalancerSchemeEnum
        , Network.AWS.ELBv2.Types.LoadBalancerState
        , Network.AWS.ELBv2.Types.LoadBalancerStateEnum
        , Network.AWS.ELBv2.Types.LoadBalancerTypeEnum
        , Network.AWS.ELBv2.Types.Matcher
        , Network.AWS.ELBv2.Types.Product
        , Network.AWS.ELBv2.Types.ProtocolEnum
        , Network.AWS.ELBv2.Types.Rule
        , Network.AWS.ELBv2.Types.RuleCondition
        , Network.AWS.ELBv2.Types.RulePriorityPair
        , Network.AWS.ELBv2.Types.SSLPolicy
        , Network.AWS.ELBv2.Types.SubnetMapping
        , Network.AWS.ELBv2.Types.Tag
        , Network.AWS.ELBv2.Types.TagDescription
        , Network.AWS.ELBv2.Types.TargetDescription
        , Network.AWS.ELBv2.Types.TargetGroup
        , Network.AWS.ELBv2.Types.TargetGroupAttribute
        , Network.AWS.ELBv2.Types.TargetHealth
        , Network.AWS.ELBv2.Types.TargetHealthDescription
        , Network.AWS.ELBv2.Types.TargetHealthReasonEnum
        , Network.AWS.ELBv2.Types.TargetHealthStateEnum
        , Network.AWS.ELBv2.Types.TargetTypeEnum

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-elbv2-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.ELBv2
        , Test.AWS.Gen.ELBv2
        , Test.AWS.ELBv2.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-elbv2
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
